[fix] overflow-x hidden

--- a/app/assets/stylesheets/players.scss
+++ b/app/assets/stylesheets/players.scss
@@ -14,6 +14,8 @@ body {
   background-image: image-url("original_bg2.jpg");
   background-position: top center;
   background-repeat: repeat-y;
+  overflow-x: hidden;
+
 }
 
 div {
